[tool.poetry]
name = "py-vapid"
version = "1.10.0"
description = "Simple VAPID header generation library"
authors = ["J-R Conlin <src+vapid@jrconlin.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
cryptography = { version = ">=41.0.0" }

[tool.poetry.group.test.dependencies]
pytest = "*"
coverage = "*"
mock = ">=1.0.0"
flake8 = "*"

[tool.poetry.scripts]
vapid = "py_vapid.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
