[package]
name = "vapid"
version = "0.1.0"
authors = ["jrconlin <jconlin+git@mozilla.com>"]
edition = "2018"
description = "An implementation of the RFC 8292 Voluntary Application Server Identification (VAPID) Auth header generator"
repository = "https://github.com/web-push-libs/vapid"
license = "MPL 2.0"

[dependencies]
openssl = "0.9.16"
serde_json = "1.0.2"
base64 = "0.6.0"
time = "0.1"
